[package]
name = "ql-grep"
version = "0.1.0"
edition = "2021"

[dependencies]
ansi_term = "^0.12"
anyhow = "^1"
clap = { version = "^4.1", features = ["derive"] }
combine = "^4.6"
crossbeam-channel = "^0.5"
gcollections = "^1.5"
ignore = "^0.4"
intervallum = "^1.4"
is-terminal = "^0.4"
knuffel = "^2"
lazy_static = "^1.4"
miette = { version = "^4.3", features=["fancy"] }
num_cpus = "^1"
once_cell = "^1.16"
pretty = "^0.11"
regex = "^1"
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["env-filter"]}
thiserror = "^1"
tree-sitter = "^0.20"
tree-sitter-c = "^0.20"
tree-sitter-cpp = "^0.20"
tree-sitter-java = "^0.20"

# Required for tree-sitter
[build-dependencies]
cc="^1.0"

[dev-dependencies]
serde = { version = "^1", features = ["derive"] }
test-generator = "^0.3"
toml = "^0.5"

[lib]
crate-type = ["rlib", "dylib"]

[[bin]]
name = "qg"
